--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.6.0",
     "@builder.io/qwik-city": "^1.6.0",
+    "@qwik-ui/headless": "^0.4.4",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
